--- a/WebSG/assets/css/checklist.css
+++ b/WebSG/assets/css/checklist.css
@@ -1,3 +1,20 @@
+.times-item {
+  width: 40px;
+  text-align: right;
+  font-size: 15px;
+  position: absolute;
+  right: -20px;
+  opacity: 0;
+}
+
+.hover-times:hover>i {
+  opacity: 1 !important;
+}
+
+.hover-times i {
+  transition: all .2s;
+}
+
 .span-newitem {
   cursor: pointer;
   margin-left: -10px;
