--- a/WebSG/assets/css/checklist.css
+++ b/WebSG/assets/css/checklist.css
@@ -1,3 +1,25 @@
+.card-footer {
+  margin-top: -20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.kanban-item {
+  position: relative !important;
+}
+
+.img-tarefa {
+  margin-top: 15px;
+}
+
+.delete-check {
+  position: absolute;
+  right: 30px;
+  top: 15px;
+  cursor: pointer;
+}
+
 .times-item {
   width: 40px;
   text-align: right;
